updated about page with better text hierarchy

--- a/about.html
+++ b/about.html
@@ -105,32 +105,32 @@
       <div class="col">
           <h1>About</h1>
           <h5>Howdy, I’m Danny Pagano – a designer and photographer from Tucson, Arizona. I design simple things for clients with complex products and ideas.</h5>
-
       <div class="row pt-3">
         <div class="col-sm-6 pb-3">
-          <h6 class="text-muted">Capabilities</h6>
+          <h6>Capabilities</h6>
 
-          <p>Identity Design and Branding<br>
+          <p class="text-muted">Identity Design and Branding<br>
               Graphic Design<br>
               Web Design<br>
               Photography</p>
 
         </div>
         <div class="col-sm-6 pb-3">
-          <h6 class="text-muted">Work With Me</h6>
-            <a href='#'>howdy@dannypagano.com</a><br>
-              <a href='#'>520.338.9040</a>
+          <h6>Work With Me</h6>
+            <p class="text-muted">howdy@dannypagano.com<br>520.338.9040</p>
         </div>
+
       </div>
-      <div class="col-sm-6">
-        <h6 class="text-muted">Colophon</h6>
-        <p>Web design, development and photography by Danny Pagano.</p>
-        <p>Some work shown was completed while employed at Godat Design, these projects are noted above the project description.</p>
-        <p>Fonts are <a href="https://www.youworkforthem.com/font/T9667/alliance" target="_blank" class="link">Alliance</a> by <a href="https://www.degarism.com/" target="_blank" class="link">Degarism Studio</a> and <a href="https://www.youworkforthem.com/font/T11632/generisch-mono" target="_blank" class="link">Generisch Mono</a> by Akufadhl.</p>
-        <p>Faster load times accomplished thanks to <a href="https://benseymour.com/blog/2017-02-24-Responsive-Images-No-Plugin" target="_blank" class="link">Ben Seymour's Responsive Images in Jekyll Without a Plugin</a>
-<p>This site is generated using <a href="https://jekyllrb.com/" target="_blank" class="link">Jekyll</a> and hosted on <a href="https://github.com/" target="_blank" class="link">Github.</a></p>
-        <h6 class="text-muted">Land Acknowledgement</h6>
-        <p>I acknowledge the Tohono O’odham, Hohokam, and Pascua Yaqui peoples who are the ancestral stewards of the lands where I live and work. I pay respect to their Elders past and present.</p>
+      <div class=" col-sm-6">
+        <h6 class="pt-3">Colophon</h6>
+        <p class="text-muted">Web design, development and photography by Danny Pagano.</p>
+        <p class="text-muted">Some work shown was completed while employed at Godat Design, these projects are noted above the project description.</p>
+        <p class="text-muted">Fonts are <a href="https://www.youworkforthem.com/font/T9667/alliance" target="_blank" class="link">Alliance</a> by <a href="https://www.degarism.com/" target="_blank" class="link">Degarism Studio</a> and <a href="https://www.youworkforthem.com/font/T11632/generisch-mono" target="_blank" class="link">Generisch Mono</a> by Akufadhl.</p>
+        <p class="text-muted">Faster load times accomplished thanks to <a href="https://benseymour.com/blog/2017-02-24-Responsive-Images-No-Plugin" target="_blank" class="link">Ben Seymour's Responsive Images in Jekyll Without a Plugin</a>
+<p class="text-muted">This site is generated using <a href="https://jekyllrb.com/" target="_blank" class="link">Jekyll</a> and hosted on <a href="https://github.com/" target="_blank" class="link">Github.</a></p>
+        <h6>Land Acknowledgement</h6>
+        <p class="text-muted">I acknowledge the Tohono O’odham, Hohokam, and Pascua Yaqui peoples who are the ancestral stewards of the lands where I live and work. I pay respect to their Elders past and present.</p>
+      </div>
       </div>
     </div>
   </div>
