--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
           <h5 class="pb-3">Howdy, I’m Danny Pagano – a designer and photographer from Tucson, Arizona with wide-ranging experience across creative disciplines.</h5>
           <h5 class="pb-3">My formal design experience spans corporate identity design, web and digital design, in addition to marketing and communication strategy. My approach to any design challenge leverages cross-disciplinary ideas in design, technology, and imaging-making to produce simple communicative work for complex clients.</h5>
           <h5 class="pb-3">I'm a quick study of new ideas and skills, and relish the challenge of applying that knowledge to whatever problem I'm currently tackling.</h5>
-          <h5 class="pb-3">I spend a lot of time thinking about sustainability, climate and permaculture. I dig riding bikes, playing golf and camping. I will attempt to take a DIY approach to virtually any at-home project with mixed results.</h5>
+          <h5 class="pb-3">I spend a lot of time thinking about sustainability, climate and permaculture. I dig riding bikes, playing golf and camping. Outside of work, I will attempt to take a DIY approach to virtually any at-home project with mixed results.</h5>
           <h5 class="pb-3">✌️</h5>
       </div>
       </div>
