--- a/about.html
+++ b/about.html
@@ -120,6 +120,12 @@
         <div class="col-12 col-md-6">
           <div class="pb-3">
               <hr></hr>
+              <h6>Currently</h6>
+          <p>Brand Designer at <a class="link" target=_blank" href="https://tailscale.com>Tailscale ↗</a>, helping make 
+the internet simpler, safer, and more human, one connection at a time.</p>
+          </div>
+        <div class="pb-3">
+              <hr></hr>
               <h6>Capabilities</h6>
               <p>Branding and Identity<br>
                 Graphic Design<br>
