about: remove tumblr

--- a/about.html
+++ b/about.html
@@ -142,8 +142,7 @@ the internet simpler, safer, and more human, one connection at a time.</p>
           <div class="pb-3">
             <hr></hr>
             <h6>Elsewhere</h6>
-            <p><a class="link" target="_blank" href="https://instagram.com/slickbrownfox">Instagram ↗</a><br>
-            <a class="link" target="_blank" href="https://slickbrownfox.tumblr.com">Tumblr ↗</a> (Yeah, still using Tumblr)</p>
+            <p><a class="link" target="_blank" href="https://instagram.com/slickbrownfox">Instagram ↗</a></p>
           </div>
 
         </div>
