fix case study description for SNT

--- a/_work/2020-12-01-snt.html
+++ b/_work/2020-12-01-snt.html
@@ -20,7 +20,7 @@ video:
 deliverables: [Branding and Identity, Web Design, Web Development]
 roles: [Designer, Developer, Account Manager]
 credit: yes
-description: Identity design for a rail services conglomerate serving the northern United States.
+description: Identity design for a life sciences startup empowering new, unseen insights in biological research.
 ---
 
 <div class="py-2">
