Revert "remove phone number"

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ layout: default
           <div class="pb-3">
             <hr></hr>
             <h6>Work With Me</h6>
-            <p >howdy@dannypagano.com</p>
+            <p >howdy@dannypagano.com<br>520.222.9910</p>
           </div>
 
         </div>
